engine-net-2/examples/Errors/FunctionParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec { i:int=f(42) }

quit
